--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rspotify = "0.11.5"
+rspotify = {version = "0.11.5", features = ["env-file"]}
+actix-web = "4"
