--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rspotify = {version = "0.11.5", features = ["env-file"]}
 actix-web = "4"
+rspotify = {version = "0.11.5", features = ["env-file"]}
+serde = {version = "1.0", features = ["derive"]}
