--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ version = "0.1.0"
 
 [dependencies]
 actix-web = "4"
-rspotify = {version = "0.11.5", features = ["env-file"]}
+futures = {version = "0.3.25"}
+rspotify = {version = "0.11.5", features = ["env-file", "cli"]}
 serde = {version = "1.0", features = ["derive"]}
