--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ version = "0.1.0"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = "4.11.0"
+clap = {version = "4.5", features = ["derive"]}
 futures = {version = "0.3.31"}
 futures-util = {version = "0.3.31"}
 rspotify = {version = "0.14.0", features = ["env-file", "cli"]}
 serde = {version = "1.0.228", features = ["derive"]}
+tokio = {version = "1", features = ["full"]}
