--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/lib.rs"
 
 [dependencies]
 clap = {version = "4.5", features = ["derive"]}
+dialoguer = "0.11"
 futures = {version = "0.3.31"}
 futures-util = {version = "0.3.31"}
 rspotify = {version = "0.14.0", features = ["env-file", "cli"]}
